# DiscordObhod

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  build.bat
resources/: app.manifest
src/: main.cpp
